Initial cleanups, switch to Java 11