@@ -1,19 +1,20 @@
 package nez.x.generator;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.TreeMap;
 
 import nez.tool.peg.GrammarTranslatorVisitor;
 import nez.util.Verbose;
 
 public class GeneratorLoader {
-	public final static String GeneratorLoaderPoint = "nez.main.ext.L";
-	static TreeMap<String, Class<?>> classMap = new TreeMap<String, Class<?>>();
+	public static final String GeneratorLoaderPoint = "nez.main.ext.L";
+	static TreeMap<String, Class<?>> classMap = new TreeMap<>();
 
 	public static void regist(String key, Class<?> c) {
 		classMap.put(key, c);
 	}
 
-	public final static boolean isSupported(String key) {
+	public static boolean isSupported(String key) {
 		if (!classMap.containsKey(key)) {
 			try {
 				Class.forName(GeneratorLoaderPoint + key);
@@ -23,14 +24,12 @@ public class GeneratorLoader {
 		return classMap.containsKey(key);
 	}
 
-	public final static GrammarTranslatorVisitor load(String key) {
+	public static GrammarTranslatorVisitor load(String key) {
 		Class<?> c = classMap.get(key);
 		if (c != null) {
 			try {
-				return (GrammarTranslatorVisitor) c.newInstance();
-			} catch (InstantiationException e) {
-				Verbose.traceException(e);
-			} catch (IllegalAccessException e) {
+				return (GrammarTranslatorVisitor) c.getDeclaredConstructor().newInstance();
+			} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 				Verbose.traceException(e);
 			}
 		}
