@@ -1,16 +1,14 @@
 package nez.util;
 
 
+import java.lang.reflect.InvocationTargetException;
+
 public class ExtensionLoader {
-	public final static Object newInstance(String loadPoint, String ext) {
+	public static Object newInstance(String loadPoint, String ext) {
 		try {
 			Class<?> c = Class.forName(loadPoint + ext);
-			return c.newInstance();
-		} catch (ClassNotFoundException e) {
-
-		} catch (InstantiationException e) {
-			Verbose.traceException(e);
-		} catch (IllegalAccessException e) {
+			return c.getDeclaredConstructor().newInstance();
+		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			Verbose.traceException(e);
 		}
 		return null;
